[gd_scene load_steps=41 format=3]

[ext_resource type="Script" path="res://Script/Hero/Role1SHallow.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cm13x5ojcbj2h" path="res://Art/HeroPicture/Role_1Shallow.png" id="2"]
[ext_resource type="Texture2D" uid="uid://d2tbbcspiy5m8" path="res://Art/HeroPicture/Role1SpecialEffect/Role1LYFB.png" id="3"]
[ext_resource type="Texture2D" uid="uid://c5fl46366us0h" path="res://Art/HeroPicture/Role1SpecialEffect/Role1ZZ_1.png" id="4"]
[ext_resource type="Texture2D" uid="uid://ox4td2wjnoj7" path="res://Art/HeroPicture/Role1SpecialEffect/Role1zz.png" id="5"]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource( "3" )
region = Rect2(0, 0, 389, 179)
script = null

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource( "3" )
region = Rect2(778, 0, 389, 179)
script = null

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource( "3" )
region = Rect2(1167, 0, 389, 179)
script = null

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource( "3" )
region = Rect2(1556, 0, 389, 179)
script = null

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource( "3" )
region = Rect2(0, 179, 389, 179)
script = null

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource( "3" )
region = Rect2(389, 179, 389, 179)
script = null

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource( "3" )
region = Rect2(778, 179, 389, 179)
script = null

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource( "3" )
region = Rect2(1167, 179, 389, 179)
script = null

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource( "3" )
region = Rect2(1556, 179, 389, 179)
script = null

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource( "3" )
region = Rect2(389, 0, 389, 179)
script = null

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource( "4" )
region = Rect2(0, 0, 300, 300)
script = null

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource( "4" )
region = Rect2(300, 0, 300, 300)
script = null

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource( "4" )
region = Rect2(600, 0, 300, 300)
script = null

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource( "4" )
region = Rect2(900, 0, 300, 300)
script = null

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource( "4" )
region = Rect2(1200, 0, 300, 300)
script = null

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource( "4" )
region = Rect2(0, 300, 300, 300)
script = null

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource( "4" )
region = Rect2(300, 300, 300, 300)
script = null

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource( "4" )
region = Rect2(600, 300, 300, 300)
script = null

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource( "4" )
region = Rect2(900, 300, 300, 300)
script = null

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource( "4" )
region = Rect2(1200, 300, 300, 300)
script = null

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource( "4" )
region = Rect2(0, 600, 300, 300)
script = null

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource( "4" )
region = Rect2(300, 600, 300, 300)
script = null

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource( "4" )
region = Rect2(600, 600, 300, 300)
script = null

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource( "4" )
region = Rect2(900, 600, 300, 300)
script = null

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource( "4" )
region = Rect2(1200, 600, 300, 300)
script = null

[sub_resource type="AtlasTexture" id="26"]
atlas = ExtResource( "5" )
region = Rect2(0, 0, 215, 145)
script = null

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource( "5" )
region = Rect2(215, 0, 215, 145)
script = null

[sub_resource type="SpriteFrames" id="28"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "1" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "3" )
}, {
"duration": 1.0,
"texture": SubResource( "4" )
}, {
"duration": 1.0,
"texture": SubResource( "5" )
}, {
"duration": 1.0,
"texture": SubResource( "6" )
}, {
"duration": 1.0,
"texture": SubResource( "7" )
}, {
"duration": 1.0,
"texture": SubResource( "8" )
}, {
"duration": 1.0,
"texture": SubResource( "9" )
}, {
"duration": 1.0,
"texture": SubResource( "10" )
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"lyfb",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "11" )
}, {
"duration": 1.0,
"texture": SubResource( "12" )
}, {
"duration": 1.0,
"texture": SubResource( "13" )
}, {
"duration": 1.0,
"texture": SubResource( "14" )
}, {
"duration": 1.0,
"texture": SubResource( "15" )
}, {
"duration": 1.0,
"texture": SubResource( "16" )
}, {
"duration": 1.0,
"texture": SubResource( "17" )
}, {
"duration": 1.0,
"texture": SubResource( "18" )
}, {
"duration": 1.0,
"texture": SubResource( "19" )
}, {
"duration": 1.0,
"texture": SubResource( "20" )
}, {
"duration": 1.0,
"texture": SubResource( "21" )
}, {
"duration": 1.0,
"texture": SubResource( "22" )
}, {
"duration": 1.0,
"texture": SubResource( "23" )
}, {
"duration": 1.0,
"texture": SubResource( "24" )
}, {
"duration": 1.0,
"texture": SubResource( "25" )
}, {
"duration": 1.0,
"texture": SubResource( "26" )
}, {
"duration": 1.0,
"texture": SubResource( "27" )
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"zz",
"speed": 25.0
}]
script = null

[sub_resource type="RectangleShape2D" id="29"]
size = Vector2(150, 124)
script = null

[sub_resource type="Animation" id="30"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RoleAction:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Role1Shallow/Hitbox:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "29" )]
}
script = null

[sub_resource type="RectangleShape2D" id="31"]
size = Vector2(305, 129)
script = null

[sub_resource type="Animation" id="32"]
resource_name = "lyfb"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RoleAction:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpecialEffect:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"lyfb", &"lyfb"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpecialEffect:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpecialEffect:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpecialEffect:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0],
"method": &"add_music"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Role1Shallow/Hitbox:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, true, false, true, true, false, true, true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Role1Shallow/Hitbox:shape")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "31" )]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Role1Shallow/Hitbox:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, -5.5)]
}
script = null

[sub_resource type="Animation" id="33"]
resource_name = "wait"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpecialEffect:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpecialEffect:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"empty"]
}
script = null

[sub_resource type="Animation" id="34"]
resource_name = "zz"
length = 2.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RoleAction:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 1.4, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpecialEffect:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"zz", &"zz"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpecialEffect:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 15, 16, 16, 17]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpecialEffect:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.4, 2.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0.4, 0.4), Vector2(1, 1), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpecialEffect:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.4, 2.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(10, -180), Vector2(-40, 20), Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RolePlayer:speed_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2.8, 1.0]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [3],
"method": &"add_music"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Role1Shallow/Hitbox:shape")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "29" )]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Role1Shallow/Hitbox:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-52, 13)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Role1Shallow/Hitbox:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 1.3, 2.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
script = null

[sub_resource type="AnimationLibrary" id="35"]
_data = {
"RESET": SubResource( "30" ),
"lyfb": SubResource( "32" ),
"wait": SubResource( "33" ),
"zz": SubResource( "34" )
}
script = null

[node name="Role1Shallow" type="Node2D"]
script = ExtResource( "1" )

[node name="RoleAction" type="Sprite2D" parent="."]
texture = ExtResource( "2" )
hframes = 5
vframes = 3
frame = 10

[node name="SpecialEffect" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource( "28" )
animation = &"empty"

[node name="RolePlayer" type="AnimationPlayer" parent="."]
speed_scale = 2.8
libraries = {
"": SubResource( "35" )
}

[node name="Role1Shallow" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="Hitbox" type="CollisionShape2D" parent="Role1Shallow"]
position = Vector2(1.5, -5.5)
shape = SubResource( "29" )
disabled = true

[node name="wait" type="Timer" parent="."]

[connection signal="timeout" from="wait" to="." method="_on_wait_timeout" flags=18]
